--- a/pilipenko/index.html
+++ b/pilipenko/index.html
@@ -165,15 +165,15 @@
 									<div class="comtainer">
 										<div class="row">
 											<div class="col-md-12 col-sm-6">
-												<img src="img/pre1.png" alt="">
+												<div class="right-col">
+													<img src="img/pre1.png" alt="">
+													<img src="img/pre2.png" alt="">
+													<img src="img/pre3.png" alt="">
+													<img src="img/pre4.png" alt="">
+												</div>
 											</div>
 										</div>
 									</div>
-									
-
-									<img src="img/pre2.png" alt="">
-									<img src="img/pre3.png" alt="">
-									<img src="img/pre4.png" alt="">
 								</div>
 							</div>
 						</div>
@@ -198,7 +198,7 @@
 						<div class="col-md-6 col-sm-12">
 							<div class="e-mail">
 								<input type="text" class="form-control" placeholder="ваш Email">
-								<a href="" class="btn btn_2 ">Отправить</a>
+								<a href="" class="btn btn_2 " style="opacity: 3">Отправить</a>
 							</div>
 							<div class="soc-btn">
 								<a href=""><i class="fa fa-instagram"></i></a>
