--- a/pilipenko/index.html
+++ b/pilipenko/index.html
@@ -30,16 +30,14 @@
 		<div class="top-header">
 			<div class="navbar-head">
 				<button class="main_mnu_buttons hidden-md hidden-lg hidden-sm"> 
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+					<a href="" class="bars"> <i class="fa fa-bars" aria-hidden="true"></i></a>
 				</button>
 				<div class="menu-header">
 					<nav class="main_mnu visible">
 						<ul class="otstup_mnu">
 							<li><a href="#Blog" class="">Блог</a></li>
 							<li><a href="#description_second" class="">Аналитика</a/li>
-								<li><a href="#pricing" class="">Контакты</a></li>
+							<li><a href="#pricing" class="">Контакты</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -161,10 +159,10 @@
 										<a href="">Подробнее <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-12 center">
+								<div class="col-md-4 col-sm-6  center">
 									<div class="comtainer">
 										<div class="row">
-											<div class="col-md-12 col-sm-6">
+											<div class="col-md-12 col-xs-12">
 												<div class="right-col">
 													<img src="img/pre1.png" alt="">
 													<img src="img/pre2.png" alt="">
@@ -185,17 +183,17 @@
 			<div class="fonts">
 				<div class="container">
 					<div class="row">
-						<div class="title-footer center">
+						<div class="title-footer col-center">
 							<h1>Контакты</h1>
 							<hr>
 						</div>
-						<div class="col-md-6 col-sm-12">
+						<div class="col-md-6 col-sm-12 col-xs-12">
 							<div class="phone">
 								+380994046822
 								<a href=""> roman.philipenko@gmail.com</a>
 							</div>
 						</div>
-						<div class="col-md-6 col-sm-12">
+						<div class="col-md-6 col-sm-12 center">
 							<div class="e-mail">
 								<input type="text" class="form-control" placeholder="ваш Email">
 								<a href="" class="btn btn_2 " style="opacity: 3">Отправить</a>
