--- a/pilipenko/index.html
+++ b/pilipenko/index.html
@@ -159,15 +159,15 @@
 										<a href="">Подробнее <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-12   center">
-									<div class="comtainer">
-										<div class="row">
-											<div class="col-md-12 col-sm- 6 col-xs-12 ">
+								<div class="col-md-4   center">
+									<div class="container">
+										<div class="row">q
+											<div class="col-md-4 col-sm- 6 col-xs-12 ">
 												<div class="right-col">
-													<img src="img/pre1.png" alt="">
-													<img src="img/pre2.png" alt="">
-													<img src="img/pre3.png" alt="">
-													<img src="img/pre4.png" alt="">
+													<img src="img/pre1.png" alt="" class="otstup-right">
+													<img src="img/pre2.png" alt="" class="otstup-right">
+													<img src="img/pre3.png" alt="" class="otstup-right">
+													<img src="img/pre4.png" alt="" class="otstup-right">
 												</div>
 											</div>
 										</div>
