--- a/pilipenko/index.html
+++ b/pilipenko/index.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/animate/animate.css">
-	<link rel="stylesheet" href="css/media.css" />
+	<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
 	<header id="home" class="header navbar-fixed-top">
@@ -183,17 +183,17 @@
 			<div class="fonts">
 				<div class="container">
 					<div class="row">
-						<div class="title-footer col-center">
+						<div class="title-footer center">
 							<h1>Контакты</h1>
 							<hr>
 						</div>
-						<div class="col-md-6 col-sm-12 col-xs-12">
+						<div class="col-md-6 col-sm-12 col-xs-12 center-position">
 							<div class="phone">
 								+380994046822
 								<a href=""> roman.philipenko@gmail.com</a>
 							</div>
 						</div>
-						<div class="col-md-6 col-sm-12 center">
+						<div class="col-md-6  center">
 							<div class="e-mail">
 								<input type="text" class="form-control" placeholder="ваш Email">
 								<a href="" class="btn btn_2 " style="opacity: 3">Отправить</a>
