--- a/pilipenko/index.html
+++ b/pilipenko/index.html
@@ -29,7 +29,7 @@
 	<header id="home" class="header navbar-fixed-top">
 		<div class="top-header">
 			<div class="navbar-head">
-				<button class="main_mnu_buttons hidden-md hidden-lg hidden-sm"> 
+				<button class="main_mnu_buttons hidden-md hidden-lg "> 
 					<a href="" class="bars"> <i class="fa fa-bars" aria-hidden="true"></i></a>
 				</button>
 				<div class="menu-header">
@@ -161,7 +161,7 @@
 								</div>
 								<div class="col-md-4   center">
 									<div class="container">
-										<div class="row">q
+										<div class="row">
 											<div class="col-md-4 col-sm- 6 col-xs-12 ">
 												<div class="right-col">
 													<img src="img/pre1.png" alt="" class="otstup-right">
@@ -193,10 +193,10 @@
 								<a href=""> roman.philipenko@gmail.com</a>
 							</div>
 						</div>
-						<div class="col-md-6  center">
+						<div class="col-md-6 col-xs-12 center">
 							<div class="e-mail">
 								<input type="text" class="form-control" placeholder="ваш Email">
-								<a href="" class="btn btn_2 " style="opacity: 3">Отправить</a>
+								<a href="" class="btn btn_2">Отправить</a>
 							</div>
 							<div class="soc-btn">
 								<a href=""><i class="fa fa-instagram"></i></a>
