--- a/pilipenko/index.html
+++ b/pilipenko/index.html
@@ -34,7 +34,7 @@
 				</button>
 				<div class="menu-header">
 					<nav class="main_mnu visible">
-						<ul class="otstup_mnu">
+						<ul class="otstup_mnu clearfix">
 							<li><a href="#Blog" class="">Блог</a></li>
 							<li><a href="#description_second" class="">Аналитика</a/li>
 							<li><a href="#pricing" class="">Контакты</a></li>
