--- a/pilipenko/index.html
+++ b/pilipenko/index.html
@@ -32,6 +32,13 @@
 				<button class="main_mnu_buttons hidden-md hidden-lg "> 
 					<a href="" class="bars"> <i class="fa fa-bars" aria-hidden="true"></i></a>
 				</button>
+				<div class="small-menu" style="display: none">
+					<ul class="otstup_mnu clearfix">
+						<li><a href="#Blog" class="">Блог</a></li>
+						<li><a href="#description_second" class="">Аналитика</a/li>
+						<li><a href="#pricing" class="">Контакты</a></li>
+					</ul>
+				</div>
 				<div class="menu-header">
 					<nav class="main_mnu visible">
 						<ul class="otstup_mnu clearfix">
@@ -212,19 +219,10 @@
 				<a href="#"><i class="fa fa-chevron-up"></i></a>
 			</div>
 		</footer>
-		
-	<!--[if lt IE 9]>
-	<script src="libs/html5shiv/es5-shim.min.js"></script>
-	<script src="libs/html5shiv/html5shiv.min.js"></script>
-	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-	<script src="libs/respond/respond.min.js"></script>
-<![endif]-->
 <script src="libs/jquery/jquery-1.11.1.min.js"></script>
 <script src="libs/fancybox/jquery.fancybox.pack.js"></script>
 <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
 <script src="js/common.js"></script>
 <script src="js/animate-css.js"></script>
-<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
 </html>
