--- a/freelancer/index.html
+++ b/freelancer/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<div class="heading">
-					<img src="img/logo.png" class="logo">
+					<img src="build/img/logo.png" class="logo">
 					<div class="main_mnu_button hidden-md hidden-lg">
 					  <span></span>
 					  <span></span>
@@ -76,7 +76,7 @@
 				<div class="portfolio_head">
 					<div class="col-sm-6">
 						<div class="img_pk animated">
-							<img src="img/portfolio.jpg" >
+							<img src="build/img/portfolio.jpg" >
 						</div>
 					</div>
 					<div class="col-sm-6 ">
@@ -102,7 +102,7 @@
 						<div class="team-member">
 							<div class="col-md-4 col-sm-12">
 								<div class="team">
-									<img src="img/man1.png" alt="" />
+									<img src="build/img/man1.png" alt="" />
 									<div class="team-info">
 										<h2>Joey</h2>
 										<h5>Web Developer</h5>
@@ -113,7 +113,7 @@
 
 							<div class="col-md-4 col-sm-12">
 								<div class="team">
-									<img src="img/man2.png" alt="" />
+									<img src="build/img/man2.png" alt="" />
 									<div class="team-info">
 										<h2>Matt</h2>
 										<h5>Web Designer</h5>
@@ -124,7 +124,7 @@
 
 							<div class="col-md-4 col-sm-12">
 								<div class="team">
-									<img src="img/man3.png" alt="" />
+									<img src="build/img/man3.png" alt="" />
 									<div class="team-info animated">
 										<h2>Mike</h2>
 										<h5>Copywriter</h5>
