--- a/freelancer/index.html
+++ b/freelancer/index.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" href="favicon.png" />
 		<link rel="stylesheet" href="build/libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
 		<link rel="stylesheet" href="build/libs/font-awesome-4.2.0/css/font-awesome.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/animate.css">
+		<link rel="stylesheet" type="text/css" href="build/css/animate.css">
 		<link rel="stylesheet" href="build/css/style.css" />
 	</head>
 	<body>
