fixed  menu links

--- a/freelancer/index.html
+++ b/freelancer/index.html
@@ -22,10 +22,9 @@
 					</div>
 					<nav class="main_mnu">
 						<ul>
-							<li class="activ"><a href="#About">About</a></li>
-							<li><a href="#work">Work</a></li>
+							<li class="activ"><a href="#about">About</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
-							<li><a href="#contact">Contact</a></li>
+							<li><a href="#team">Team</a></li>
 							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						</ul>
@@ -47,7 +46,7 @@
 			
 		</header>
 		<!-- Services -->
-		<section id="Services">
+		<section id="about">
 			<div class="container">
 				<div class="servises clearfix">
 						<div class="services_item col-md-4 col-sm-12">
