added styles and images for portfolio home page

--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
 		<meta name="description" content="" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- 		<link rel="shortcut icon" href="favicon.png" />
-		<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
-		<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/animate.css">
-		<link rel="stylesheet" href="css/style.css" /> -->
+ 		<link rel="shortcut icon" href="favicon.png" />
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<div class="works">	
-			<a href="/phone">Zoom UI Kit</a>
-			<a href="/pilipenko">Pilipenko blog</a>
-			<a href="/freelancer">Freelancer</a>
-			<a href="/albros">Albros</a>
+	<div class="container">
+		<div class="row">
+			<h2 class="title">Shpak portfolio</h2>
+			<div class="works">
+				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/phone"><img class='img-responsive img-circle' src="img/phone.PNG" alt="">Zoom UI Kit</a></div></div>
+				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/pilipenko"><img class='img-responsive img-circle' src="img/pilipenko.png" alt="">Pilipenko blog</a></div></div>
+				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/freelancer"><img class='img-responsive img-circle' src="img/freelancer.png" alt="">Freelancer</a></div></div>
+				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/albros"><img class='img-responsive img-circle' src="img/albros.PNG" alt="">Albros</a></div></div>
+			</div>
 		</div>
-<!-- <script src="libs/jquery/jquery-1.11.1.min.js"></script>
-<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-<script src="js/common.js"></script> -->
+	</div>
+		
+<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
