--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 	<html lang="ru">
 	<head>
 		<meta charset="utf-8" />
-		<title>Freelancer</title>
+		<title>Shapk | Portfolio</title>
 		<meta name="description" content="" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 		<link rel="shortcut icon" href="favicon.png" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
