--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<h2 class="title">Shpak portfolio</h2>
 			<div class="works">
 				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/phone"><img class='img-responsive img-circle' src="img/phone.PNG" alt="">Zoom UI Kit</a></div></div>
-				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/pilipenko"><img class='img-responsive img-circle' src="img/pilipenko.png" alt="">Pilipenko blog</a></div></div>
-				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/freelancer"><img class='img-responsive img-circle' src="img/freelancer.png" alt="">Freelancer</a></div></div>
+				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/pilipenko"><img class='img-responsive img-circle' src="img/pilipenko.PNG" alt="">Pilipenko blog</a></div></div>
+				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/freelancer"><img class='img-responsive img-circle' src="img/freelancer.PNG" alt="">Freelancer</a></div></div>
 				<div class="col-md-3 col-sm-6 col-xs-12"><div class="work-item"><a href="/albros"><img class='img-responsive img-circle' src="img/albros.PNG" alt="">Albros</a></div></div>
 			</div>
 		</div>
