added styles for menu in Zoom UI Kit landing page

--- a/phone/index.html
+++ b/phone/index.html
@@ -44,7 +44,7 @@
 								<li><a href="#works" class="">Fearures</a></li>
 								<li><a href="#description_second" class="">Discribe</a></li>
 								<li><a href="#pricing" class="">Pricing</a></li>
-								<li><a href="#downloadApps" class="">Download</a></li>
+								<li><a href="#download" class="">Download</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -411,7 +411,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="our-prising">
+		<section id="pricing">
 			<div class="container">
 				<div class="row">
 					<div class="title-prising center-position">
