fixed mobile menu work

--- a/albros/index.html
+++ b/albros/index.html
@@ -38,11 +38,6 @@
 									<li><a href="#Contacts">Contacts</a></li>
 								</ul>
 							</nav>
-							<button class="auth_buttons hidden-md hidden-lg "><i class="fa fa-user" aria-hidden="true"></i></button>
-							<div class="top_links">
-								<a href="#">Вход</a>	/ 
-								<a href="#">Регистарция</a>
-							</div>
 							<div class="text_header">	
 								<h1>	We are on the same wave with you</h1>
 								<p>	Best regards , Albros CA</p>
@@ -131,10 +126,10 @@
 		<h1 class="dark_text animated">Contacts</h1>
 		<div class="hidden">
 				<form  id="callback" class="pop_form">
-					<h4>Оставить свои данные</h4>
-					<input type="text" name="name" placeholder="имя..." required />
-					<input type="text" name="phone" placeholder="телефон..." required / >
-					<button class="call_to_action" type="submit">Заказать</button>
+					<h4>Leave your contacts</h4>
+					<input type="text" name="name" placeholder="name..." required />
+					<input type="text" name="phone" placeholder="phone..." required / >
+					<button class="call_to_action" type="submit">OK</button>
 				</form>
 		</div>
 		<div class="col-md-4">
