change paths to files

--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -17,17 +17,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.png" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/animate/animate.css">
-    <link rel="stylesheet" href="css/flipdown.css" />
+    <link rel="stylesheet" href="build/libs/font-awesome-4.2.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="build/css/style.css" />
+    <link rel="stylesheet" href="build/css/animate/animate.css">
+    <link rel="stylesheet" href="build/css/flipdown.css" />
 </head>
     
 <body>
     <header id="head">
-        <div class="head-img" style="background-image: url(jpg/main.jpg);">
+        <div class="head-img" style="background-image: url(build/jpg/main.jpg);">
             <div class="scrolldown">
-                <a href="#" class="scroll"><img src="jpg/down.svg"></a>
+                <a href="#" class="scroll"><img src="build/jpg/down.svg"></a>
             </div>
             <div class="mask">
                 <div class="container">
@@ -78,7 +78,7 @@
                                 <input type="button" class=" btn btn-yel btn-black-text" value="Зарегестрироваться" />
                             </div>
                             <div class="bonus">
-                                <img src="jpg/group-20.svg" alt="">
+                                <img src="build/jpg/group-20.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -96,15 +96,15 @@
                     <div class="all-pic center-position ">
 
                         <div class="col-md-4 col-sm-4 col-xs-12">
-                            <img src="jpg/hands.svg" alt="">
+                            <img src="build/jpg/hands.svg" alt="">
                             <h5 class="layer">зарегестрируйся</h5>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-12">
-                            <img src="jpg/money.svg" alt="">
+                            <img src="build/jpg/money.svg" alt="">
                             <h5 class="layer">торгуй</h5>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-12">
-                            <img src="jpg/big-money.svg" alt="">
+                            <img src="build/jpg/big-money.svg" alt="">
                             <h5 class="layer">Получай прибыль</h5>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
             <div class="fonts">
                 <div class="number">0,1%</div>
                 <div class="container">
-                    <div class="picture"><img src="jpg/save-money.png" alt=""></div>
+                    <div class="picture"><img src="build/jpg/save-money.png" alt=""></div>
                     <div class="fonts-mask">
                         <h1>Никаких лимитов снятия и плата составляет всего 0,1%</h1>
                         <div class="description">
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="all-forms">
                     <div class="col-md-4 col-sm-12 col-xs-12 center-position top">
-                        <img src="jpg/apple.svg" alt="">
+                        <img src="build/jpg/apple.svg" alt="">
                     </div>
                     <div class="col-md-8 col-sm-12 col-xs-12 ">
                         <div class="title-tov top">
@@ -151,14 +151,14 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12 col-xs-12 center-position ">
                         <div class="calendar center-position">
-                            <img src="jpg/calendar-with-a-clock-time-tools.svg" class="icon-cal" alt="">
+                            <img src="build/jpg/calendar-with-a-clock-time-tools.svg" class="icon-cal" alt="">
                             <h5 class="text-calendar">Мы работем - 365 дней в году, 24 часа в сутки</h5>
                             <p class="text-4">Вам не придется ждать недели или месяцы, чтобы получить ответ от поддержки клиентов. Обслуживание наших клиентов работает 24/7/365. Следующие профессионалы здесь для вас:</p>
                         </div>
                     </div>
                     <div class="col-md-6 hidden-sm hidden-xs">
                         <div class="pic-girl ">
-                            <img src="jpg/girl.jpg" alt="">
+                            <img src="build/jpg/girl.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -173,42 +173,42 @@
             <div class="row border-bottom">
                 <div class="col-md-4 col-sm-6 col-xs-12 center-position advent">
                     <div class="colum-discount ">
-                        <img src="jpg/discount.svg" alt="">
+                        <img src="build/jpg/discount.svg" alt="">
                         <h5 class="title-discount">Бонусы для первых пользователей</h5>
                         <h5 class="text-discount">Первые пользователи биржи получат финансовые вознаграждения за ранние регистрации</h5>
                     </div>
                 </div>
                 <div class="col-md-4  col-sm-6 col-xs-12 center-position advent">
                     <div class="colum-discount ">
-                        <img src="jpg/security.svg" alt="">
+                        <img src="build/jpg/security.svg" alt="">
                         <h5 class="title-discount">Конфиденциальность</h5>
                         <h5 class="text-discount">Вся информация закрыта и не может быть открыта ни одному государственному органу</h5>
                     </div>
                 </div>
                 <div class="col-md-4  col-sm-6 col-xs-12 center-position advent">
                     <div class="colum-discount ">
-                        <img src="jpg/world.svg" alt="">
+                        <img src="build/jpg/world.svg" alt="">
                         <h5 class="title-discount">Трейдеры со всего мира</h5>
                         <h5 class="text-discount">Трейдеры из 170 стран заинтересованы в сотрудничестве с нами</h5>
                     </div>
                 </div>
                 <div class="col-md-4  col-sm-6 col-xs-12 center-position advent">
                     <div class="colum-discount ">
-                        <img src="jpg/gauge.svg" alt="">
+                        <img src="build/jpg/gauge.svg" alt="">
                         <h5 class="title-discount">Высокая рабочая скорость</h5>
                         <h5 class="text-discount">Наш обмен может обрабатывать до 5 млн транзакций в секунду и до 500 000 запросов клиентов одновременно</h5>
                     </div>
                 </div>
                 <div class="col-md-4  col-sm-6 col-xs-12 center-position advent">
                     <div class="colum-discount ">
-                        <img src="jpg/graph.svg" alt="">
+                        <img src="build/jpg/graph.svg" alt="">
                         <h5 class="title-discount">Четкие и понятные графики</h5>
                         <h5 class="text-discount">Высококачественные графики для анализа позволяют эффективно определять тенденции и показатели</h5>
                     </div>
                 </div>
                 <div class="col-md-4  col-sm-6 col-xs-12 center-position advent">
                     <div class="colum-discount ">
-                        <img src="jpg/okey.svg" alt="">
+                        <img src="build/jpg/okey.svg" alt="">
                         <h5 class="title-discount">Удобный интерфейс</h5>
                         <h5 class="text-discount">Мы создали четкий и удобный интерфейс, которым каждый пользователь будет пользоваться</h5>
                     </div>
@@ -244,8 +244,8 @@
                                 <div class="modal-header">
                                     <!-- <h5 class="modal-title" id="exampleModalLabel">New message</h5> -->
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                  </button>
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
                                 </div>
                             </div>
                             <h2>Зарегестрируйся сейчас</h2>
@@ -328,11 +328,11 @@
         </div>
     </section>
 
-    <script src="libs/jquery/jquery-1.11.1.min.js"></script>
+    <script src="build/libs/jquery/jquery-1.11.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="libs/flipdown.js"></script>
-    <script src="libs/animate-css.js"></script>
-    <script src="js/common.js"></script>
+    <script src="build/libs/flipdown.js"></script>
+    <script src="build/libs/animate-css.js"></script>
+    <script src="build/js/common.js"></script>
 
 
 
