--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/pilipenko"><img class='img-responsive img-circle' src="img/pilipenko.PNG" alt="">Pilipenko blog</a></div></div>
 				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/freelancer"><img class='img-responsive img-circle' src="img/freelancer.PNG" alt="">Freelancer</a></div></div>
 				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/albros"><img class='img-responsive img-circle' src="img/albros.PNG" alt="">Albros</a></div></div>
-				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/bitcoin"><img class='img-responsive img-circle' src="img/bitcoin.PNG" alt="">Bitcoin</a></div></div>
+				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/bitcoin"><img class='img-responsive img-circle' src="img/bitcoin.png" alt="">Bitcoin</a></div></div>
 			</div>
 		</div>
 	</div>
