--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 	<body>
 	<div class="container">
 		<div class="row">
-			<h2 class="title">Shpak portfolio</h2>
+			<div class="container">
+				<p class="title">Shpak`s <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+			</div>
 			<div class="works">
-				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/phone"><img class='img-responsive img-circle' src="img/phone.PNG" alt="">Zoom UI Kit</a></div></div>
-				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/pilipenko"><img class='img-responsive img-circle' src="img/pilipenko.PNG" alt="">Pilipenko blog</a></div></div>
-				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/freelancer"><img class='img-responsive img-circle' src="img/freelancer.PNG" alt="">Freelancer</a></div></div>
-				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/albros"><img class='img-responsive img-circle' src="img/albros.PNG" alt="">Albros</a></div></div>
-				<div class="col-md-2 col-sm-4 col-xs-12"><div class="work-item"><a href="/bitcoin"><img class='img-responsive img-circle' src="img/bitcoin.png" alt="">Bitcoin</a></div></div>
+				<div class="work-item"><a href="/phone"><img class='img-responsive img-circle' src="img/phone.PNG" alt="">Zoom UI Kit</a></div>
+				<div class="work-item"><a href="/pilipenko"><img class='img-responsive img-circle' src="img/pilipenko.PNG" alt="">Pilipenko blog</a></div>
+				<div class="work-item"><a href="/freelancer"><img class='img-responsive img-circle' src="img/freelancer.PNG" alt="">Freelancer</a></div>
+				<div class="work-item"><a href="/albros"><img class='img-responsive img-circle' src="img/albros.PNG" alt="">Albros</a></div>
+				<div class="work-item"><a href="/bitcoin"><img class='img-responsive img-circle' src="img/bitcoin.png" alt="">Bitcoin</a></div>
 			</div>
 		</div>
 	</div>
 		
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
