added libs files

--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.png" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="build/css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="build/libs/font-awesome-4.2.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="build/css/style.css" />
     <link rel="stylesheet" href="build/css/animate/animate.css">
@@ -329,7 +329,7 @@
     </section>
 
     <script src="build/libs/jquery/jquery-1.11.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="build/libs/bootstrap/bootstrap.min.js"></script>
     <script src="build/libs/flipdown.js"></script>
     <script src="build/libs/animate-css.js"></script>
     <script src="build/js/common.js"></script>
